[gd_scene load_steps=3 format=3 uid="uid://bv2p0uv6kl5wf"]

[ext_resource type="Script" uid="uid://dt3as5bxwl20n" path="res://scripts/ui/stats_screen.gd" id="1_48wu6"]
[ext_resource type="PackedScene" uid="uid://bp1cjms12djqd" path="res://ui/WeaponStatRow.tscn" id="2_7mh48"]

[node name="StatsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48wu6")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -347.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="RowKunai" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_7mh48")]
layout_mode = 2

[node name="RowBlade" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_7mh48")]
layout_mode = 2

[node name="RowBomb" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_7mh48")]
layout_mode = 2
